src/test/ui/const-generics/const-expression-parameter.stderr
error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:13:20
   |
LL |     i32_identity::<1 + 2>();
   |                    ^^^^^
help: surround this const argument in braces
   |
LL |     i32_identity::<{ 1 + 2 }>();
   |                    ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:21:20
   |
LL |     i32_identity::<1 + 2, 3 + 4>();
   |                    ^^^^^
help: surround this const argument in braces
   |
LL |     i32_identity::<{ 1 + 2 }, 3 + 4>();
   |                    ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:21:27
   |
LL |     i32_identity::<1 + 2, 3 + 4>();
   |                           ^^^^^
help: surround this const argument in braces
   |
LL |     i32_identity::<1 + 2, { 3 + 4 }>();
   |                           ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:32:11
   |
LL |     baz::<1 + 2, 3 + 4>();
   |           ^^^^^
help: surround this const argument in braces
   |
LL |     baz::<{ 1 + 2 }, 3 + 4>();
   |           ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:32:18
   |
LL |     baz::<1 + 2, 3 + 4>();
   |                  ^^^^^
help: surround this const argument in braces
   |
LL |     baz::<1 + 2, { 3 + 4 }>();
   |                  ^       ^

warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-expression-parameter.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0107]: wrong number of const arguments: expected 1, found 2
  --> $DIR/const-expression-parameter.rs:21:27
   |
LL |     i32_identity::<1 + 2, 3 + 4>();
   |                           ^^^^^ unexpected const argument

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0107`.
